# opinionated-rust-template

./: README.md
template/: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  justfile
template/.github/workflows/: ci.yml
template/src/: lib.rs
template/tests/: tests.rs
