[package]
name = "{{project-name}}"
version = "0.1.0"
authors = ["{{authors}}"]
edition = "2021"
rust-version = "1.77.2"
description = "{{ project-description }}"
# documentation = ""
# homepage = ""
repository = ""{% if license == "mit" %}
license = "MIT"{% endif %}{% if license == "apache" %}
license = "Apache-2.0"{% endif %}{% if license == "both" %}
license = "MIT OR Apache-2.0"{% endif %}{% if license == "none" %}
license = ""{% endif %}
keywords = ["{{project-name}}"]
# categories = []

publish = false # no accidents while in dev

[features]
default = []
full = []

[dependencies]

[dev-dependencies]
criterion = "0.5.1"
pretty_assertions = "1"

[package.metadata.cargo-udeps.ignore]
development = ["criterion", "pretty_assertions"]

[package.metadata.playground]
features = ["full"]

[profile.release]
lto = true
panic = "abort"
codegen-units = 1
incremental = false

[profile.bench]
lto = true
panic = "abort"
codegen-units = 1
incremental = false

[[bench]]
name = "benches"
harness = false
required-features = ["full"]
